2017-04-16  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https to download

2016-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

	* inst/rmarkdown/templates/pdf/resources/tintPdf-template.tex: color

	* inst/examples/simplePdf.Rmd: Small edits and corrections
	* inst/examples/simpleHtml.Rmd: Ditto
	* inst/rmarkdown/templates/pdf/skeleton/skeleton.Rmd: Ditto
	* inst/rmarkdown/templates/html/skeleton/skeleton.Rmd: Ditto

	* tests/simple.R: Conditional test of pdf rendering

2016-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/simplePdf.Rmd: Small edits
	* inst/examples/simpleHtml.Rmd: Ditto
	* inst/rmarkdown/templates/pdf/skeleton/skeleton.Rmd: Ditto
	* inst/rmarkdown/templates/html/skeleton/skeleton.Rmd: Ditto

2016-10-09  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add Travis badge

2016-10-08  Dirk Eddelbuettel  <edd@debian.org>

	* tests/simple.R: Minimal test added

	* inst/examples/simple.Rmd: Added (for use in simple tests)

	* .travis.yml: Added

2016-10-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/rmarkdown/templates/pdf/resources/tintPdf-template.tex: No
	italics in toc either

	* README.md: Added badges, updated CRAN status

2016-10-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.2

	* inst/rmarkdown/templates/html/resources/tint.css: Correct use of
	italic and bold
	* inst/rmarkdown/templates/html/resources/font/roboto/: Additional fonts

	* inst/rmarkdown/templates/html/skeleton/skeleton.Rmd: Small edits
	* inst/rmarkdown/templates/pdf/skeleton/skeleton.Rmd: Ditto

	* R/html.R: Updated roxygen code for help pages
	* R/pdf.R: Ditto
	* R/utils.R: Ditto
	* man/tintHtml.Rd: Updated help page

2016-10-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Set license to GPL-3 as for tufte, other small edits
	* README.md: Ditto

2016-10-05  Dirk Eddelbuettel  <edd@debian.org>

	* R/html.R: Renamed from tint.R