@@ -3,10 +3,7 @@ title: "Tint Is Not Tufte"
 subtitle: "An implementation in R Markdown"
 author: "JJ Allaire, Yihui Xie, Dirk Eddelbuettel"
 date: "`r Sys.Date()`"
-output:
-  tint::tintPdf: 
-    citation_package: natbib
-    latex_engine: pdflatex
+output: tint::tintPdf
 bibliography: skeleton.bib
 link-citations: yes
 ---
