@@ -1,3 +1,9 @@
+2017-10-31  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/pdf.R (tintPdf): More default argument
+	* inst/examples/simplePdf.Rmd: Shorter YAML frontmatter
+	* inst/rmarkdown/templates/pdf/skeleton/skeleton.Rmd: Idem
+
 2017-04-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml (before_install): Use https to download
